--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
                                     <h5 class="d-inline text-primary">Age:</h5> 28
                                 </div>
                                 <div class="col-sm-6 py-1">
-                                    <h5 class="d-inline text-primary">Degree:</h5> Master
+                                    <h5 class="d-inline text-primary">Degree:</h5> Bachelor's
                                 </div>
                                 <div class="col-sm-6 py-1">
-                                    <h5 class="d-inline text-primary">Experience:</h5> 7 Years
+                                    <h5 class="d-inline text-primary">Experience:</h5> 9 Years
                                 </div>
                                 <div class="col-sm-6 py-1">
                                     <h5 class="d-inline text-primary">Email:</h5> mnteristo@gmail.com
@@ -86,6 +86,39 @@
                                     <h5 class="d-inline text-primary">Address:</h5> 5-11 Nashiharachō, Nara, 630-8253, Japan
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- About End -->
+                
+                <div class="container bg-white py-5 px-0">
+                    <div class="bg-primary text-center p-5">
+                    </div>
+                </div>
+                <!--Summary start-->
+                <div class="container bg-white py-5">
+                    <div class="row px-3">
+                        <div class="col-12">
+                            <h2 class="title position-relative pb-2 mb-4">Summary</h2>
+                        </div>
+                        <div class="col-12">
+                            <p>- Always Open to Remote Job </p>
+                            <br>
+                            <p>- 6+ years of experience in web development</p>
+                            <p>Experience in React/Redux development/Tawilwind CSS more than 5 years.</p>
+                            <p>Composed front-end app structure & built React components and UI from given mockup. </p>
+                            <p>Good TypeScript programming skills in VueJS and ReactJS.</p>
+                            <p>Good knowledge of Functional Programing, Object-Oriented Programming and design patterns</p>
+                            <p>React | React Native | Redux | Vue | Angular | Node | Typescript | Next | Nuxt | MongoDB | Tailwind CSS | Storybook </p>
+                            <br>
+                            <p>- 3+ years of experience in Blockchain Development</p>
+                            <p>Experience with Solidity, web3.js, ethers.js, Hardhat with a strong understanding of the EVM</p>
+                            <p>Design, develop, program, test, debug, maintain smart contracts code.</p>
+                            <p>Build governance systems with multi-stage voting.</p>
+                            <p>worked on many DeFi and Dapps based on Ethereum Blockchain and have enough experience in developing and writing Smart Contracts.</p>
+                            <p>Expert in Uniswap, Sushiswap, Swapping tokens, Staking, Yield Farming, Lottery Smart Contracts etc</p>
+                            <p>Evaluate and evolve scalability, security, performance, and gas optimization.</p>
+                            <p>Solidity | Ether.js | Web3.js | Rust | Hardhat</p>
                         </div>
                     </div>
                 </div>
@@ -303,50 +336,51 @@
                                     <i class="fa fa-arrow-right text-primary position-absolute" style="top: 3px; left: -24px;"></i>
                                     <h5 class="mb-1">SENIOR BLOCKCHAIN ENGINEER</h5>
                                     <p class="mb-2">Grayblock | <small>2021 - present</small></p>
-                                    <p>Built a front-end application for minting and staking using React and Web3.js.
-                                        Contributed to staking  contracts  with Solidity.</p>
-                                        <p class="tech-p">Technologies: DApps, Web 3.0, Solidity, Ethereum</p>
-                                </div>
-                                <div class="position-relative mb-4">
-                                    <i class="fa fa-arrow-right text-primary position-absolute" style="top: 3px; left: -24px;"></i>
-                                    <h5 class="mb-1">BLOCKCHAIN ENGINEER</h5>
-                                    <p class="mb-2">Escrow Protocol | <small>2020 - 2021</small></p>
-                                    <p>Built a front-end application for minting and staking NFTs using React and Web3.js.
-                                        Contributed to a contract for NFT registration and redemption with Solidity.
-                                        Created a POC Vue.js front-end platform for an NFT gallery using Moralis and Vue 3.
-                                        Worked on the token distribution and migration from BSC to Polygon network using BscScan, PolygonScan API, and Solidity.</p>
+                                    <p>- Built a front-end application for minting and staking using React and Web3.js.</p>
+                                    <p>- Contributed to staking  contracts  with Solidity.</p>
+                                    <p>- Performed smart contract security audits.</p>
                                     <p class="tech-p">Technologies: DApps, Web 3.0, Solidity, Ethereum</p>
                                 </div>
                                 <div class="position-relative mb-4">
                                     <i class="fa fa-arrow-right text-primary position-absolute" style="top: 3px; left: -24px;"></i>
                                     <h5 class="mb-1">BLOCKCHAIN ENGINEER</h5>
+                                    <p class="mb-2">Escrow Protocol | <small>2020 - 2021</small></p>
+                                    <p>- Built a front-end application for minting and staking NFTs using React and Web3.js.</p>
+                                    <p>- Contributed to a contract for NFT registration and redemption with Solidity.</p>
+                                    <p>- Created a POC Vue.js front-end platform for an NFT gallery using Moralis and Vue.</p>
+                                    <p>- Worked on the token distribution and migration from BSC to Polygon network using BscScan, PolygonScan API, and Solidity.</p>
+                                    <p class="tech-p">Technologies: DApps, Web 3.0, Solidity, Ethereum.</p>
+                                </div>
+                                <div class="position-relative mb-4">
+                                    <i class="fa fa-arrow-right text-primary position-absolute" style="top: 3px; left: -24px;"></i>
+                                    <h5 class="mb-1">BLOCKCHAIN ENGINEER</h5>
                                     <p class="mb-2">Centrys, Inc. | <small>2019 - 2020</small></p>
-                                    <p>Contributed to one of the biggest mining pools on the AION network.
-                                        Implemented an IBFT consensus algorithm for the AION Blockchain.
-                                        Created a permissioned blockchain with the newly implemented consensus.
-                                        Refactored the core blockchain to allow higher transactions per second.
-                                        Developed smart contracts for testing new blockchain features.</p>
-                                        <p class="tech-p">Technologies: C#, Encryption, AES, Blockchain, Solidity, Ethereum, Java</p>
+                                    <p>- Wrote smart contracts and fixed security holes.</p>
+                                    <p>- Contributed to one of the biggest mining pools on the AION network.</p>
+                                    <p>- Implemented an IBFT consensus algorithm for the AION Blockchain.</p>
+                                    <p>- Created a permissioned blockchain with the newly implemented consensus.</p>
+                                    <p>- Developed smart contracts for testing new blockchain features.</p>
+                                    <p class="tech-p">Technologies: C#, Encryption, AES, Blockchain, Solidity, Ethereum, Java</p>
                                 </div>
                                 <div class="position-relative mb-4">
                                     <i class="fa fa-arrow-right text-primary position-absolute" style="top: 3px; left: -24px;"></i>
                                     <h5 class="mb-1">FULLSTACK ENGINEER</h5>
                                     <p class="mb-2">Holidu | <small>2016 - 2018</small></p>
-                                    <p>Integrated Redux and MobX on a number of React-based front-end projects for the better state management of React components.
-                                        Implemented a GraphQL-and-Apollo server for a React-and-Vue.js front-end data query.
-                                        Built AWS Lambda functions with Node.js and configured an automated Git's pulling and deploying pipeline in AWS using Nginx, PM2, and Bitbucket webhooks.
-                                        Created a new customized chart library using D3.js and Plotly.js.
-                                        Embedded a Google tag manager and Google Analytics for the website conversion tracking and the user event tracking.
-                                        Integrated Vue.js, Vuex, and Vuetify with a Laravel back-end.</p>
+                                    <p>- Composed front-end app structure & built React components and UI from given mockup.</p>
+                                    <p>- Integrated Redux and MobX on a number of React-based front-end projects for the better state management of React components.</p>
+                                    <p>- Implemented a GraphQL-and-Apollo server for a React-and-Vue.js front-end data query.</p>
+                                    <p>- Created a new customized chart library using D3.js and Plotly.js.</p>
+                                    <p>- Embedded a Google tag manager and Google Analytics for the website conversion tracking and the user event tracking.</p>
+                                    <p>- Integrated Vue.js, Vuex, and Vuetify with a Laravel back-end.</p>
                                     <p class="tech-p">Technologies: AWS Lambda, GraphQL, Node.js, Vue.js, React, PHP, JavaScript</p>
                                 </div>
                                 <div class="position-relative mb-4">
                                     <i class="fa fa-arrow-right text-primary position-absolute" style="top: 3px; left: -24px;"></i>
                                     <h5 class="mb-1">FRONTEND ENGINEER INTERN</h5>
                                     <p class="mb-2">Myxer | <small>2015 - 2016</small></p>
-                                    <p>Developed a streaming music service front-end that allows users to create custom radio stations
-                                        Created and optimized AngularJS services, directives, bindings, and event handlers used for radio station user UX.
-                                        Fixed several bugs and reworked the UI/UX to provide smoother interactions with a web app while music was streaming.</p>
+                                    <p>- Developed a streaming music service front-end that allows users to create custom radio stations.</p>
+                                    <p>- Created and optimized AngularJS services, directives, bindings, and event handlers used for radio station user UX.</p>
+                                    <p>- Fixed several bugs and reworked the UI/UX to provide smoother interactions with a web app while music was streaming.</p>
                                     <p class="tech-p">Technologies: Less, CSS, AngularJS, JavaScript</p>
                                 </div>
                             </div>
@@ -404,7 +438,7 @@
                         <div class="col-12">
                             <div class="contact-info">
                                 <p><i class="fa fa-user"></i>  Ken Suzuki</p>
-                                <p><i class="fa fa-tag"></i>  Blockchain Engineer</p>
+                                <p><i class="fa fa-tag"></i>  Blockchain Engineer | Web Developer</p>
                                 <p><i class="fa fa-envelope"></i><a href="#">  mnteristo@gmail.com</a></p>
                                 <p><i class="fa fa-map-marker"></i>  5-11 Nashiharachō, Nara, 630-8253, Japan</p>
                                 <div class="social">
