--- a/index.html
+++ b/index.html
@@ -104,19 +104,19 @@
                         <div class="col-12">
                             <p>- Always Open to Remote Job </p>
                             <br>
-                            <p>- 6+ years of experience in web development</p>
+                            <p>- 6+ years of experience in Web Development</p>
                             <p>Experience in React/Redux development/Tawilwind CSS more than 5 years.</p>
                             <p>Composed front-end app structure & built React components and UI from given mockup. </p>
                             <p>Good TypeScript programming skills in VueJS and ReactJS.</p>
-                            <p>Good knowledge of Functional Programing, Object-Oriented Programming and design patterns</p>
+                            <p>Good knowledge of Functional Programing, Object-Oriented Programming and design patterns.</p>
                             <p>React | React Native | Redux | Vue | Angular | Node | Typescript | Next | Nuxt | MongoDB | Tailwind CSS | Storybook </p>
                             <br>
                             <p>- 3+ years of experience in Blockchain Development</p>
-                            <p>Experience with Solidity, web3.js, ethers.js, Hardhat with a strong understanding of the EVM</p>
+                            <p>Experience with Solidity, web3.js, ethers.js, Hardhat with a strong understanding of the EVM.</p>
                             <p>Design, develop, program, test, debug, maintain smart contracts code.</p>
                             <p>Build governance systems with multi-stage voting.</p>
-                            <p>worked on many DeFi and Dapps based on Ethereum Blockchain and have enough experience in developing and writing Smart Contracts.</p>
-                            <p>Expert in Uniswap, Sushiswap, Swapping tokens, Staking, Yield Farming, Lottery Smart Contracts etc</p>
+                            <p>Worked on many DeFi and Dapps based on Ethereum Blockchain and have enough experience in developing and writing Smart Contracts.</p>
+                            <p>Expert in Uniswap, Sushiswap, Swapping tokens, Staking, Yield Farming, Lottery Smart Contracts etc.</p>
                             <p>Evaluate and evolve scalability, security, performance, and gas optimization.</p>
                             <p>Solidity | Ether.js | Web3.js | Rust | Hardhat</p>
                         </div>
