--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                                     <p class="mb-2">Escrow Protocol | <small>2020 - 2021</small></p>
                                     <p>- Built a front-end application for minting and staking NFTs using React and Web3.js.</p>
                                     <p>- Contributed to a contract for NFT registration and redemption with Solidity.</p>
-                                    <p>- Created a Vue.js front-end platform for an NFT gallery using  Vue.</p>
+                                    <p>- Created a front-end platform for an NFT gallery using  Vue.</p>
                                     <p>- Worked on the token distribution and migration from BSC to Polygon network using BscScan, PolygonScan API, and Solidity.</p>
                                     <p class="tech-p">Technologies: DApps, Web 3.0, Solidity, Ethereum.</p>
                                 </div>
