--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
             <div class="sidebar">
                 <div class="sidebar-text d-flex flex-column h-100 justify-content-center text-center">
                     <img class="w-100 img-fluid mb-4" src="img/profile.jpg" alt="Image">
-                    <h1 class="mt-2">Ken Suzuki</h1>
+                    <h1 class="mt-2">Owen Mok</h1>
                     <div class="mb-4" style="height: 22px;">
                         <h4 class="typed-text-output d-inline-block text-body"></h4>
                         <div class="typed-text d-none">Blockchain Engineer, Web Developer</div>
                     </div>
                     <div class="d-flex justify-content-center mt-auto mb-3">
-                        <a class="mx-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="mx-2" href="https://www.linkedin.com/in/owen-mok-84a805215"><i class="fab fa-linkedin-in"></i></a>
                         <a class="mx-2" href="live:.cid.3948e8a965c20a9f"><i class="fab fa-skype"></i></a>
                         <a class="mx-2" href="https://github.com/mxnre"><i class="fab fa-github"></i></a>
                     </div>
@@ -68,22 +68,16 @@
                                 schedule. I enjoy learning new technologies and sharing findings with my colleagues.</p>
                             <div class="row">
                                 <div class="col-sm-6 py-1">
-                                    <h5 class="d-inline text-primary">Name:</h5> Ken Suzuki
+                                    <h5 class="d-inline text-primary">Name:</h5> Owen Mok
                                 </div>
                                 <div class="col-sm-6 py-1">
                                     <h5 class="d-inline text-primary">Age:</h5> 28
                                 </div>
                                 <div class="col-sm-6 py-1">
-                                    <h5 class="d-inline text-primary">Degree:</h5> Bachelor's
+                                    <h5 class="d-inline text-primary">Degree:</h5> Bachelor's Degree
                                 </div>
                                 <div class="col-sm-6 py-1">
                                     <h5 class="d-inline text-primary">Experience:</h5> 9 Years
-                                </div>
-                                <div class="col-sm-6 py-1">
-                                    <h5 class="d-inline text-primary">Email:</h5> mnteristo@gmail.com
-                                </div>
-                                <div class="col-sm-6 py-1">
-                                    <h5 class="d-inline text-primary">Address:</h5> 5-11 Nashiharachō, Nara, 630-8253, Japan
                                 </div>
                             </div>
                         </div>
@@ -317,7 +311,7 @@
                                 <div class="position-relative mb-4">
                                     <i class="fa fa-arrow-right text-primary position-absolute" style="top: 3px; left: -24px;"></i>
                                     <h5 class="mb-1">Bachelor's degree of Computer Science</h5>
-                                    <p class="mb-2">Nara Institute of Science and Technology | <small>2010 - 2014</small></p>
+                                    <p class="mb-2">Singapore Institute of Technology | <small>2010 - 2014</small></p>
                                 </div>
                             </div>
                         </div>
@@ -437,10 +431,9 @@
                         </div>
                         <div class="col-12">
                             <div class="contact-info">
-                                <p><i class="fa fa-user"></i>  Ken Suzuki</p>
+                                <p><i class="fa fa-user"></i>  Owen Mok</p>
                                 <p><i class="fa fa-tag"></i>  Blockchain Engineer | Web Developer</p>
-                                <p><i class="fa fa-envelope"></i><a href="#">  mnteristo@gmail.com</a></p>
-                                <p><i class="fa fa-map-marker"></i>  5-11 Nashiharachō, Nara, 630-8253, Japan</p>
+                                <p><i class="fa fa-map-marker"></i>  147 Charville Ln, Hayes UB4 8PB, UK</p>
                                 <div class="social">
                                     <a class="mx-2" href="#"><i class="fab fa-linkedin-in"></i></a>
                                     <a class="mx-2" href="live:.cid.3948e8a965c20a9f"><i class="fab fa-skype"></i></a>
