--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                     <h5 class="d-inline text-primary">Age:</h5> 28
                                 </div>
                                 <div class="col-sm-6 py-1">
-                                    <h5 class="d-inline text-primary">Degree:</h5> Bachelor's
+                                    <h5 class="d-inline text-primary">Degree:</h5> Bachelor's Degree
                                 </div>
                                 <div class="col-sm-6 py-1">
                                     <h5 class="d-inline text-primary">Experience:</h5> 9 Years
@@ -441,7 +441,7 @@
                                 <p><i class="fa fa-tag"></i>  Blockchain Engineer | Web Developer</p>
                                 <p><i class="fa fa-envelope"></i><a href="#">  mnteristo@gmail.com</a></p>
                                 <p><i class="fa fa-map-marker"></i>  5-11 Nashiharachō, Nara, 630-8253, Japan</p>
-                                <div class="social">
+                                <div class="social">                                
                                     <a class="mx-2" href="#"><i class="fab fa-linkedin-in"></i></a>
                                     <a class="mx-2" href="live:.cid.3948e8a965c20a9f"><i class="fab fa-skype"></i></a>
                                     <a class="mx-2" href="https://github.com/mxnre"><i class="fab fa-github"></i></a>
