--- a/index.html
+++ b/index.html
@@ -335,7 +335,17 @@
                                 <div class="position-relative mb-4">
                                     <i class="fa fa-arrow-right text-primary position-absolute" style="top: 3px; left: -24px;"></i>
                                     <h5 class="mb-1">SENIOR BLOCKCHAIN ENGINEER</h5>
-                                    <p class="mb-2">Grayblock | <small>2021 - present</small></p>
+                                    <p class="mb-2">Hyfi corp | <small>Feb 2022 - present</small></p>
+                                    <p>- Built NFT lottery smart contract architecture and smart contract by using ERC1155.</p>
+                                    <p>- Get trustable token price and random number for lottery by using chainlink.</p>
+                                    <p>- Implemented Web3 integration and frontend development.</p>
+                                    <p>- Implemented proxy contract for upgradable and signature for security.</p>
+                                    <p class="tech-p">Technologies: DApps, NFT marketplace, Solidity, chainlink, Web 3.0, Dapps, Moralis</p>
+                                </div>
+                                <div class="position-relative mb-4">
+                                    <i class="fa fa-arrow-right text-primary position-absolute" style="top: 3px; left: -24px;"></i>
+                                    <h5 class="mb-1">SENIOR BLOCKCHAIN ENGINEER</h5>
+                                    <p class="mb-2">Grayblock | <small>Jul 2021 - Feb 2022</small></p>
                                     <p>- Built a front-end application for minting and staking using React and Web3.js.</p>
                                     <p>- Contributed to staking  contracts  with Solidity.</p>
                                     <p>- Performed smart contract security audits.</p>
@@ -344,23 +354,36 @@
                                 <div class="position-relative mb-4">
                                     <i class="fa fa-arrow-right text-primary position-absolute" style="top: 3px; left: -24px;"></i>
                                     <h5 class="mb-1">BLOCKCHAIN ENGINEER</h5>
-                                    <p class="mb-2">Escrow Protocol | <small>2020 - 2021</small></p>
-                                    <p>- Built a front-end application for minting and staking NFTs using React and Web3.js.</p>
-                                    <p>- Contributed to a contract for NFT registration and redemption with Solidity.</p>
-                                    <p>- Created a front-end platform for an NFT gallery using  Vue.</p>
-                                    <p>- Worked on the token distribution and migration from BSC to Polygon network using BscScan, PolygonScan API, and Solidity.</p>
-                                    <p class="tech-p">Technologies: DApps, Web 3.0, Solidity, Ethereum.</p>
+                                    <p class="mb-2">Cybertime.Finance | <small>Jan 2021 - Jul 2021</small></p>
+                                    <p>- Designed and developed smart contracts for an upgradeable NFT platform.</p>
+                                    <p>- Developed token, staking , voting and aution contracts with ERC20, ERC721, ERC1155 token standards.</p>
+                                    <p>- Fixed security issues and audited.</p>
+                                    <p>- Performed smart contract security audits.</p>
+                                    <p class="tech-p">Technologies: DApps, Web 3.0, Solidity, Ethereum, Hardhat, Solidity, ERC20, ERC721, ERC1155.</p>
                                 </div>
                                 <div class="position-relative mb-4">
                                     <i class="fa fa-arrow-right text-primary position-absolute" style="top: 3px; left: -24px;"></i>
                                     <h5 class="mb-1">BLOCKCHAIN ENGINEER</h5>
-                                    <p class="mb-2">Centrys, Inc. | <small>2019 - 2020</small></p>
+                                    <p class="mb-2">Gembites | <small>2020 - 2021</small></p>
+                                    <p>- Created Several Games Contract (Gambling games) using ERC standards which work on Ethereum and
+                                        Polygon Networks and deployed those contracts by verification.</p>
+                                    <p>- Implemented Metamask, Torus, other wallets to increase user experiences.</p>
+                                    <p>- Integrated Chainlink VRF for generating game random number with batching system so that users can play
+                                        fair and verifiable game easily and fast.</p>
+                                    <p>- Built Staking Rewards Contract (ULP), so investors earn GBTS tokens by staking NFTs and LP tokens.</p>
+                                    <p>- Developed Dice roll, RPS games.</p>
+                                    <p class="tech-p">Technologies: DApps, Web 3.0, Solidity, Ethereum, Chainlink</p>
+                                </div>
+                                <div class="position-relative mb-4">
+                                    <i class="fa fa-arrow-right text-primary position-absolute" style="top: 3px; left: -24px;"></i>
+                                    <h5 class="mb-1">BLOCKCHAIN ENGINEER</h5>
+                                    <p class="mb-2">Bitus Labs | <small>2019 - 2020</small></p>
+                                    <p>- Designed the architecture for an auction-based decentralized exchange.</p>
+                                    <p>- Analyzed complexity and costs for different approaches for on-chain order matching/execution.</p>
+                                    <p>- Supervised and reviewed smart contract development.</p>
                                     <p>- Wrote smart contracts and fixed security holes.</p>
-                                    <p>- Contributed to one of the biggest mining pools on the AION network.</p>
-                                    <p>- Implemented an IBFT consensus algorithm for the AION Blockchain.</p>
-                                    <p>- Created a permissioned blockchain with the newly implemented consensus.</p>
                                     <p>- Developed smart contracts for testing new blockchain features.</p>
-                                    <p class="tech-p">Technologies: C#, Encryption, AES, Blockchain, Solidity, Ethereum, Java</p>
+                                    <p class="tech-p">Technologies: Solidity, Remix IDE, Hardhat, Blockchain Platforms, Ethereum, Java</p>
                                 </div>
                                 <div class="position-relative mb-4">
                                     <i class="fa fa-arrow-right text-primary position-absolute" style="top: 3px; left: -24px;"></i>
